--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,9 @@
 <body style="background-color:powderblue;">
 
 <a href="test1.html">test1dffghffhh</a>
-Solrawit
+
+<img src="aa.jpg" alt="W3Schools.com" width="104" height="142">
+
 </body>
 
 
