แก้ชื่อพิมพ์ผิด

--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-Hello จารมาต สุดหล่อ
+Hello จารมาร์ช สุดหล่อ
 <img src="1.jpg"" alt="" width="200" height="200" border="1"/>
 
 </body>
