--- a/hello_world.html
+++ b/hello_world.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <p style="color:red">hello, world!</p>
+    <p style="color:red">hello, นักศึกษาน่ารักทุกคน!</p>
   </body>
   
 </html>
