--- a/hello_world.html
+++ b/hello_world.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <p style="color:pink">hello, นักศึกษาน่ารักทุกคน!</p>
+    <p style="color:pink">hello, นักศึกษาน่ารักทุกคน!ไม่น่ารักหรออ</p>
   </body>
   
 </html>
