--- a/Kikuanone.html
+++ b/Kikuanone.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <p style="color:orange">HELLO, ขอเกรด A ได้ไหมค่โปรดจงเมตตาเถอะค่ะ</p>
+    <p style="color:orange">HELLO อาจารย์, ดิฉันขอเกรดA ได้ไหมค่ะโปรดจงเมตตาเถอะค่ะ</p>
   </body>
 </html>
