--- a/pafun.html
+++ b/pafun.html
@@ -4,7 +4,7 @@
 <h2>คนบ้าาาาาาา</h2>
 <p>cute cute cute !!</p>
 
-<img src="11.jpg" alt="pinterest.com" width="104" height="142">
+<img src="Pictures/11.jpg" alt="cat" width="104" height="142">
 
 </body>
 </html>
